<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_article"/>

    <item
        android:id="@+id/allFeeds"
        android:icon="@drawable/ic_all_hide"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/all"/>

    <item
        android:id="@+id/addFeed"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/add_feed"/>
 	<item
        android:id="@+id/addFilter"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/add_filter"/>
 	<item
        android:id="@+id/setting"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/setting"/>

    <item
        android:id="@+id/license"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/license"/>


</menu>
