<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/autoUpdateInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:text="@string/interval"
            android:textSize="20sp" />

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:orientation="horizontal" >
        
	        <Spinner
		        android:id="@+id/sp_update_interval"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginLeft="12dp"
		        android:prompt="@string/interval"
		        android:entries="@array/update_interval_items" />
	
	        <TextView
	            android:id="@+id/hour"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4dp"
	            android:layout_marginRight="8dp"
	            android:text="@string/hour"
	            android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="12dp"
	    android:background="#cccccc" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_article_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/article_sort"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_article_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="12dp"
	    android:background="#cccccc" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_all_read_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:text="@string/all_read_back"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_all_read_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:textSize="20sp" />
    </LinearLayout>

    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="12dp"
	    android:background="#cccccc" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_open_internal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:text="@string/open_internal"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_open_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="12dp"
	    android:background="#cccccc" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_swipe_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:text="@string/swipe_direction"
            android:textSize="20sp" />

	    <Spinner
	        android:id="@+id/sp_swipe_direction"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginLeft="12dp"
	        android:prompt="@string/swipe_direction"
	        android:entries="@array/swipe_direction_items" />
    </LinearLayout>
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="12dp"
	    android:background="#cccccc" />
    
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        android:textSize="24sp" />

</LinearLayout>